--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,13 +1,12 @@
 <% layout('/layouts/boilerplate') %>
     <div class="row mt-3">
         <div class="col-8 offset-3">
-    <h3>Listing Details </h3>
+    <h3><%= listing.title %></h3>
     </div>
     <div class="card col-6 offset-3 show-card">
         <img src="<%= listing.image %>>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
           <p class="card-text">
-            <b><%= listing.title %></b> <br>
             <%= listing.description %> <br>
             &#8377; <%= listing.price.toLocaleString("en-IN") %> <br>
             <%= listing.location %> <br>
@@ -23,3 +22,25 @@
         <button class="btn btn-dark offset-5">Delete</button>
     </form>
 </div>
+<hr>
+<div class="col-8 offset-3 mb-3">
+    <h4>Leave a review</h4>
+    <form action="/listings/<%= listing.id %>/review" method="POST">
+        <div class="mb-3 mt-3">
+            <label for="rating" class="form-lable">Rating</label>
+            <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range"/>
+        </div>
+        <div class="mb-3 mt-3">
+        <label for="comment" class="form-lable">Comments</label>
+        <textarea 
+        name="review[comment]" 
+        id="comment" 
+        cols="30" 
+        rows="10"
+        class="form-control"
+        ></textarea>
+        </div>
+        <button class="btn btn-dark outline-dark">Submit</button>
+    </form>
+</div>
+
