--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -2,32 +2,33 @@
     <div class="row mt-3">
         <div class="col-8 offset-2">
     <h3>Create a new listing</h3>
-    <form method="POST" action="/listings">
+    <form method="POST" action="/listings" > 
         <div class="mb-3">
         <label for="title" class="form-lable">Title</label>
-        <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control">
+        <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control" 
+        required>
         </div>
         <div>
             <label for="description" class="form-lable">Description</label>
-            <textarea name="listing[description]" placeholder="Enter description" class="form-control"></textarea>
+            <textarea name="listing[description]" placeholder="Enter description" class="form-control" required></textarea>
         </div>
         <div class="mb-3">
         <label for="image" class="form-lable">Image Link</label>
-        <input name="listing[image]" placeholder="Entre Image URL/link" type="text" class="form-control">
+        <input name="listing[image]" placeholder="Entre Image URL/link" type="text" class="form-control" >
         </div>
         <div class="row">
             <div class="mb-3 col-md-4">
                 <label for="price" class="form-lable">Price</label>
-                <input name="listing[price]" placeholder="1200" type="number" class="form-control">
+                <input name="listing[price]" placeholder="1200" type="number" class="form-control" required>
                 </div>
                 <div class="mb-3 col-md-8 ">
                 <label for="country" class="form-lable">Country</label>
-                <input name="listing[country]" placeholder="India" type="text" class="form-control">
+                <input name="listing[country]" placeholder="India" type="text" class="form-control" required>
                 </div>
         </div>
         <div class="mb-3">
         <label for="location" class="form-lable">Location</label>
-        <input name="listing[location]" placeholder="Goa, Calangute" type="text" class="form-control">
+        <input name="listing[location]" placeholder="Goa, Calangute" type="text" class="form-control"required>
         </div>
         <button class="btn btn-dark add-btn mt-3">Add</button>
     </form>
